# Shadovi-rs

./: Cargo.toml  LICENSE  README.md  test.rs
src/: document.rs  editor.rs  filetype.rs  highlighting.rs  main.rs  row.rs  terminal.rs
