[package]
name = "shadovi_rs"
version = "0.1.0"
edition = "2021"
authors = ["Shadorain"]
description = "A small, efficient, and configurable editor for the shadows"
repository = "https://github.com/Shadorain/Shadovi-rs"
readme = "README.md"
license = "BSD-2-Clause"
keywords = ["text_editor", "vim-like", "shado", "movement", "config"]
categories = ["command-line-utilities", "command-line-interface", "text-editors"]


[dependencies]
termion = "1"
unicode-segmentation = "1"
